<!--
  Note that this application has been custom made by and for use by the ILRI Azizi Biorepository team and does not follow any standards at all ;). Server side code used by this application is in another repository. You can however reverse engineer this app or simply contact me if you feel like you have to use this App. (C) 2015 Jason Rogena <j.rogena@cgiar.org>

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Azizi ODK Pull</string>
    <string name="p_heading_form">Form</string>
    <string name="p_heading_pulling">Pulling</string>
    <string name="p_heading_house_cleaning">House Cleaning</string>

    <string name="select_a_form">Select a form</string>
    <string name="select_form_summery">Select a form you what to pull</string>

    <string name="pull_frequency">Pull frequency</string>
    <string name="pull_frequency_summery">How often do you want to pull this form</string>

    <string-array name="pull_frequency_entries">
        <item name="0">Don\'t pull at all</item>
        <item name="1">Every 5 Minutes</item>
        <item name="2">Every 15 Minutes</item>
        <item name="3">Every 30 Minutes</item>
        <item name="4">Every 1 Hour</item>
        <item name="5">Every 24 Hours</item>
    </string-array>

    <string-array name="pull_frequency_values">
        <item name="0">dnt</item>
        <item name="1">5_min</item>
        <item name="2">15_min</item>
        <item name="3">30_min</item>
        <item name="4">1_hr</item>
        <item name="5">24_hr</item>
    </string-array>

    <string name="pull_when_internet_avail">Pull whenever internet connection becomes available</string>

    <string name="pull_when_odk_launches">Pull whenever ODK Collect launches</string>
    <string name="pull_now">Pull now</string>
    <string name="pull_status">Pull status</string>
    <string name="pulling">Pulling</string>
    <string name="last_pulled_on_">Last pulled on:</string>
    <string name="never_pulled">Never pulled</string>

    <string name="delete_local_data">Delete local data</string>
    <string name="added_to_odk_pull">Has been added to ODK Pull. Open the ODK Pull app to modify when and how to update the form\'s data</string>

    <string name="fetching_forms_please_wait_">Fetching forms, please wait..</string>
    <string name="loading_please_wait_">Loading, please wait..</string>
    <string name="fetched_data">Fetched external form data</string>
    <string name="the_following_files_were_added">The following files were added:</string>
    <string name="successful_saved_csv">Successfully saved external data</string>
    <string name="unable_save_csv">Unable to save external data</string>
    <string name="unable_fetch_data_for">Unable to fetch data for</string>
    <string name="fetching_data_for_">Fetching external form data for</string>
    <string name="determining_data_for_pulling">Determining which data sets to pull</string>
    <string name="warning">Warning</string>
    <string name="delete_external_data_warning_">Clicking \'Okay\' will delete pull preferences and external data for </string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="deleted_external_data_for_form">External data for form deleted</string>
    <string name="the_following_files_were_deleted">The following files were deleted:</string>
</resources>
