<?xml version="1.0" encoding="utf-8"?>
<!--
  Note that this application has been custom made by and for use by the ILRI Azizi Biorepository team and does not follow any standards at all ;). Server side code used by this application is in another repository. You can however reverse engineer this app or simply contact me if you feel like you have to use this App. (C) 2015 Jason Rogena <j.rogena@cgiar.org>

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="category_form"
        android:title="@string/p_heading_form" >
        <ListPreference
            android:key="pref_form"
            android:title="@string/select_a_form"
            android:summary="@string/select_form_summery"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="category_pulling"
        android:title="@string/p_heading_pulling" >

        <ListPreference
            android:key="pref_pull_frequency"
            android:entries="@array/pull_frequency_entries"
            android:entryValues="@array/pull_frequency_values"
            android:summary="@string/pull_frequency_summery"
            android:title="@string/pull_frequency" />

        <CheckBoxPreference
            android:key="pref_pull_internet_on"
            android:title="@string/pull_when_internet_avail">
        </CheckBoxPreference>

        <CheckBoxPreference
            android:key="pref_pull_odk_launches"
            android:title="@string/pull_when_odk_launches">
        </CheckBoxPreference>

        <Preference
            android:key="pref_pull_now"
            android:title="@string/pull_now">
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="category_house_cleaning"
        android:title="@string/p_heading_house_cleaning" >
        <Preference
            android:key="pref_delete_data"
            android:title="@string/delete_local_data">
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>